k8s/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
