k8s/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
