k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: client-service
            port:
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: server-service
            port:
              number: 5000
